<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




        <ImageView
            android:id="@+id/registerLogo_img"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/logo_negro_sobre_blanco" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/registeract_txtv_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|start|center_horizontal"
                android:text="@string/registeract_txtv_name"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/registeract_edt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registeract_txtv_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|start|center_horizontal"
                android:text="@string/registeract_txtv_email"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/registeract_edt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registeract_txtv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|start|center_horizontal"
                android:text="@string/registeract_txtv_password"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/registeract_edt_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="text|textPassword" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/registeract_txtv_pwdConf"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|start|center_horizontal"
                android:text="@string/registeract_txtv_passwordConfirm"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/registeract_edt_pwdConf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/registeract_txtv_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|start|center_horizontal"
                android:text="@string/registeract_txtv_phoneNumber"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/registeract_edt_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="phone" />
        </LinearLayout>

        <Button
            android:id="@+id/registeract_btn_enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/registeract_btn_register" />
    </LinearLayout>

</ScrollView>