<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranja1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/profileact_txtv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registeract_txtv_userName"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/profileact_txtv_nameReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/profileact_txtv_name"
        app:layout_constraintTop_toBottomOf="@id/profileact_txtv_name"/>

    <TextView
        android:id="@+id/profileact_txtv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registeract_txtv_email"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileact_txtv_nameReceived"/>

    <TextView
        android:id="@+id/profileact_txtv_emailReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/profileact_txtv_email"
        app:layout_constraintTop_toBottomOf="@id/profileact_txtv_email"/>

    <TextView
        android:id="@+id/profileact_txtv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registeract_txtv_phoneNumber"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileact_txtv_emailReceived"/>

    <TextView
        android:id="@+id/profileact_txtv_phoneReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teléfono"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/profileact_txtv_phone"
        app:layout_constraintTop_toBottomOf="@id/profileact_txtv_phone"/>

    <TextView
        android:id="@+id/profileact_txtv_adds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tus anuncios"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        android:background="@drawable/border"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileact_txtv_phoneReceived"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profileact_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileact_txtv_adds" />




</androidx.constraintlayout.widget.ConstraintLayout>