<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranja1"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:background="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginact_img_logo"
        app:layout_constraintVertical_bias="0.19999999"
        app:srcCompat="@drawable/white_square" />

    <EditText
        android:id="@+id/loginact_edt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:ems="10"
        android:hint="@string/loginact_userName"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/negroGrisaceo"
        android:textCursorDrawable="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002" />


    <EditText
        android:id="@+id/loginact_edt_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:ems="10"
        android:hint="@string/loginact_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/negroGrisaceo"
        android:textCursorDrawable="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginact_edt_email"
        app:layout_constraintTop_toBottomOf="@+id/loginact_edt_email"
        app:layout_constraintVertical_bias="0.120000005" />

    <ImageView
        android:id="@+id/loginact_img_user"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/user_icon"
        app:layout_constraintBottom_toBottomOf="@+id/loginact_edt_email"
        app:layout_constraintEnd_toStartOf="@+id/loginact_edt_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginact_edt_email" />

    <ImageView
        android:id="@+id/loginact_img_pwd"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/candado"
        app:layout_constraintBottom_toBottomOf="@+id/loginact_edt_pwd"
        app:layout_constraintEnd_toStartOf="@+id/loginact_edt_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginact_edt_pwd" />

    <Button
        android:id="@+id/loginact_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/loginact_btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loginact_edt_pwd"
        app:layout_constraintTop_toBottomOf="@+id/loginact_edt_pwd"
        app:layout_constraintVertical_bias="0.20999998" />


    <ImageView
        android:id="@+id/loginact_img_leftLogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginEnd="23dp"
        android:background="#1D1D1D"
        app:layout_constraintBottom_toBottomOf="@+id/loginact_img_logo"
        app:layout_constraintEnd_toEndOf="@+id/loginact_img_logo"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginact_img_logo"
        app:layout_constraintVertical_bias="0.55" />

    <ImageView
        android:id="@+id/loginact_img_rightLogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:background="#373737"
        app:layout_constraintBottom_toBottomOf="@+id/loginact_img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/loginact_img_logo"
        app:layout_constraintTop_toTopOf="@+id/loginact_img_logo"
        app:layout_constraintVertical_bias="0.55" />




    <ImageView
        android:id="@+id/loginact_img_logo"
        android:layout_width="240dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toTopOf="@+id/loginact_edt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_original" />

    <TextView
        android:id="@+id/loginact_txtv_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="¿No tienes cuenta? Registrate"
        android:textColor="#0000FF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginact_btn_login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginact_btn_login"
        app:layout_constraintVertical_bias="0.0" />




</androidx.constraintlayout.widget.ConstraintLayout>